# teesql-chain-indexer

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: test.yml
crates/attest/: Cargo.toml
crates/attest/src/: address.rs  attestation.rs  kms.rs  lib.rs  signer.rs
crates/attest/tests/: canonical_json_tests.rs  sign_verify_tests.rs
crates/core/: Cargo.toml
crates/core/src/: connection.rs  control_dispatch.rs  decode.rs  ingest.rs  lib.rs  quote_recovery.rs  r2_mirror.rs  reorg.rs  schema_preflight.rs  store.rs  views.rs
crates/core/tests/: store_tests.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: as_of.rs  envelope.rs  error.rs  grpc.rs  lib.rs  metrics.rs  query.rs  sse.rs  state.rs
crates/server/src/routes/: attestation.rs  chains.rs  clusters.rs  common.rs  control.rs  events.rs  factories.rs  health.rs  metrics_route.rs  mod.rs  proof.rs  quotes.rs
crates/server/tests/: envelope_tests.rs  route_tests.rs
crates/teesql-abi/: Cargo.toml
crates/teesql-abi/src/: cluster_diamond.rs  encoding.rs  factory.rs  lib.rs
crates/teesql-abi/tests/: decode_fixtures.rs
crates/teesql-views/: Cargo.toml
crates/teesql-views/src/: compose_hashes.rs  decoded.rs  leader.rs  lib.rs  lifecycle.rs  members.rs
crates/teesql-views/tests/: replay_tests.rs
deploy/: compose.template.yml  prod.config.toml  provision.sql
docs/: api.md  deployment.md  trust-model.md
proto/: chain_indexer.proto
scripts/: deploy-chain-indexer.sh  publish-chain-indexer.sh
