[package]
name = "teesql-chain-indexer-attest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "KMS-derived signing + TDX quote binding for signed responses"

[dependencies]
dstack-sdk = { workspace = true }
alloy = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
k256 = { workspace = true }
hex = { workspace = true }
