[package]
name = "teesql-chain-indexer-abi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "alloy sol! bindings + Decoder implementations for TeeSQL contracts"

[dependencies]
teesql-chain-indexer-core = { workspace = true }
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
