[package]
name = "teesql-chain-indexer-views"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Materializers for cluster leader / members / lifecycle state"

[dependencies]
teesql-chain-indexer-core = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
